--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "babel src -d lib",
-    "dev": "nodemon --watch src --exec npm run build",
-    "start": "node server.js"
+    "watch": "nodemon --watch src --exec npm run build",
+    "start": "nodemon server.js",
+    "dev": "npm run watch & npm start"
   },
   "author": "",
   "license": "ISC",
